# kdelicious

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  bookmark.cpp  bookmark.h  bookmarkrequest.cpp  bookmarkrequest.h  browser.cpp  browser.h  cmake_install.cmake  cmake_uninstall.cmake  createbookmarkdialog.cpp  createbookmarkdialog.h  install_manifest.txt  kdelicious.kdev4  kdelicious_automoc.cpp  kdelicious_automoc.cpp.files  kdeliciousplugin.cpp  kdeliciousplugin.desktop  kdeliciousplugin.h  kdeliciousplugin.kcfg  kdeliciousplugin.rc  kdeliciousplugin_automoc.cpp  moc_kdeliciousplugin.cpp  newbookmarkwidget.ui  plugin_kdelicious.desktop  plugin_kdelicious.rc  postrequest.cpp  postrequest.h  request.cpp  request.h  ui_newbookmarkwidget.h
src/: CMakeLists.txt  kdelicious.cpp  kdelicious.h  main.cpp
